--- a/src/4-1-related.tex
+++ b/src/4-1-related.tex
@@ -49,7 +49,19 @@ This is possible because $A'(t) = -14 - 6t$. Hence $A$ changes in a non-constant
 
 \end{solution}
 
-\begin{example}
-  The area of a circle is decreasing at a rate of 2 cm$^2$/min. How fast is the radius of the circle changing when the area is 100 cm$^2$?
-\end{example}
+\rule{\textwidth}{1pt}
+\begin{multicols}{2}
+\begin{exercise}
+~\\
+  \begin{enumerate}
+    \item Find the rate of change of the area of a square whose side is 6 cm long, if the side length is increasing at 2 cm/min.
+    \item Air is being pumped into a spherical balloon. The volume of the balloon is increasing at a rate of 20 cm$^3$/s when the radius is 30 cm. How fast is the radius increasing at that time? (The volume of a ball of radius r is $V=\frac{4}{3} \pi r^3$.)
+
+    \item The area of a circle is decreasing at a rate of 2 cm$^2$/min. How fast is the radius of the circle changing when the area is 100 cm$^2$?
+
+    Answer:
+  \end{enumerate}
+\end{exercise}
+\end{multicols}
+\rule{\textwidth}{1pt}
 \end{document}
