--- a/src/5-2-FTC.tex
+++ b/src/5-2-FTC.tex
@@ -122,7 +122,7 @@ In general
 
     \item $\frac{d}{dx} \bigint_{\sin x}^{\cos x} \frac{1}{1-x^2} dx$
 
-    Answer: $\frac{-\sin x}{1-\cos^2 x} - \frac{\cos x}{1-\sin^2 x}$
+    Answer: $-\frac{1}{\sin x} - \frac{}{\cos x}$
 
     \item $\frac{d}{dx} F(\sqrt{x})$, if $F(t) = \bigint_0^t \cos(x^2)dx$
 
@@ -135,5 +135,6 @@ In general
   \end{enumerate}
 \end{exercise}
 \end{multicols}
+\rule{\textwidth}{1pt}
 
 \end{document}
