--- a/src/5-4-areas.tex
+++ b/src/5-4-areas.tex
@@ -144,4 +144,6 @@ Suppose $f(x) \le g(x)$ for $a \le x \le b$. Then the area of the region between
   \end{enumerate}
 \end{exercise}
 \end{multicols}
+\rule{\textwidth}{1pt}
+
 \end{document}
