--- a/src/5-5.intByParts.tex
+++ b/src/5-5.intByParts.tex
@@ -139,5 +139,6 @@ This is one of the most powerful method to integrate, known as the \textbf{integ
   \end{enumerate}
 \end{exercise}
 \end{multicols}
+\rule{\textwidth}{1pt}
 
 \end{document}
