--- a/src/1-1-limit.tex
+++ b/src/1-1-limit.tex
@@ -181,7 +181,7 @@ The above example is a special case of the following theorem.
 \end{theorem}
 
 \begin{example}
-  If $2-x^2 \le g(x) \le x^2$ for $-1\le x \le 1$, find $\lim_{x \to 0}g(x)$.
+  If $-x^2 \le g(x) \le x^2$ for $-1\le x \le 1$, find $\lim_{x \to 0}g(x)$.
 \end{example}
 
 \begin{example}
@@ -200,27 +200,62 @@ The above example is a special case of the following theorem.
   Find $\lim_{x \to 2+} f(x)$, $\lim_{x \to 2-} f(x)$. Does $\lim_{x \to 2} f(x)$ exist?
 \end{example}
 
-In these example, we will compute $\lim_{x \to a} f(x)$ even when $f(a)$ does not exist.
+Most of the limits you need to compute in this class will be $\lim_{x \to a} f(x)$ when $f(a)$ does not exist. Here is an example.
 \begin{example}
-  Evaluate
-  \begin{enumerate}
-    \item $\lim_{x \to -2} \dfrac{x^2 + x-2}{x^2 + 5x +6}$,
-    \begin{solution}
-      Remember that we consider $x$ values close to but not equal to $-2$. Hence $x+2 \neq 0$ and we can make the simplification
-      \[
-        \lim_{x \to -2} \dfrac{x^2 + x-2}{x^2 + 5x +6} =
-        \lim_{x \to -2} \dfrac{(x+2)(x-1)}{(x+2)(x+3)} =
-        \lim_{x \to -2} \dfrac{x-1}{x+3} = \frac{-3}{1} = -3.
-      \]
-    \end{solution}
-    \item $\lim_{x \to 5} \dfrac{\frac{1}{x} - \frac{1}{5}}{x-5}$,
-    \item $\lim_{x \to 4} \dfrac{\sqrt{x}-2}{x^2-16}$, \textit{Hint:} multiply both sides by the conjugate expression.
-    \item $\lim_{x \to -2} \dfrac{x^2 + 2x}{x^2-4}$,
-    \item $\lim_{h \to 0} \dfrac{\sqrt{4+h}-2}{h}$,
-    \item $\lim_{t \to 0} \dfrac{t}{\sqrt{4+t}-\sqrt{4-t}}$,
-    \item $\lim_{x \to -1} \dfrac{x^3+1}{x+1}$,
-    \item $\lim_{x \to 0} \dfrac{\abs{3x-1}-\abs{3x+1}}{x}$,
-    \item $\lim_{x \to 2-} \dfrac{x^2-4}{\abs{x+2}}$.
-  \end{enumerate}
+  \item $\lim_{x \to -2} \dfrac{x^2 + x-2}{x^2 + 5x +6}$,
+  \begin{solution}
+    Remember that we consider $x$ values close to but not equal to $-2$. Hence $x+2 \neq 0$ and we can make the simplification
+    \[
+      \lim_{x \to -2} \dfrac{x^2 + x-2}{x^2 + 5x +6} =
+      \lim_{x \to -2} \dfrac{(x+2)(x-1)}{(x+2)(x+3)} =
+      \lim_{x \to -2} \dfrac{x-1}{x+3} = \frac{-3}{1} = -3.
+    \]
+  \end{solution}
 \end{example}
+
+\rule{\textwidth}{1pt}
+\begin{multicols}{2}
+\begin{exercise}
+~\\
+  \begin{enumerate}
+    \item $\lim_{x \to 5} \dfrac{\frac{1}{x} - \frac{1}{5}}{x-5}$.
+
+    Answer: $-\frac{1}{25}$.
+    \item $\lim_{x \to 4} \dfrac{\sqrt{x}-2}{x^2-16}$,
+
+    Hint: multiply and divide by the conjugate expression $\sqrt{x}+2$.
+    Answer: $\frac{1}{32}$
+
+    \item $\lim_{x \to -2} \dfrac{x^2 + 2x}{x^2-4}$.
+
+    Answer: $\frac{1}{2}$
+    \item $\lim_{h \to 0} \dfrac{\sqrt{4+h}-2}{h}$.
+
+    Answer: $\frac{1}{4}$
+    \item $\lim_{t \to 0} \dfrac{t}{\sqrt{4+t}-\sqrt{4-t}}$.
+
+    Answer: 2
+    \item $\lim_{x \to -1} \dfrac{x^3+1}{x+1}$.
+
+    Answer: 3
+    \item $\lim_{x \to 0} \dfrac{\abs{3x-1}-\abs{3x+1}}{x}$.
+
+    Answer: -6
+    \item $\lim_{x \to 2-} \dfrac{x^2-4}{\abs{x+2}}$.
+
+    Answer:
+    \item $\lim_{y \to 1} \dfrac{y-4\sqrt{y}+3}{y^2-1}$.
+
+    Answer: $-\frac{1}{2}$
+    \item $\lim_{x \to 2} \dfrac{\sqrt{4-4x+x^2}}{x-2}$.
+
+    Answer: 1
+    \item If $2-x^2 \le f(x) \le 2 \cos x$ for all $x$, find $\lim_{x \to 0} f(x)$.
+
+    Answer: 2
+  \end{enumerate}
+\end{exercise}
+\end{multicols}
+\rule{\textwidth}{1pt}
+
 \end{document}
