--- a/src/4-2-indeterminate-forms.tex
+++ b/src/4-2-indeterminate-forms.tex
@@ -5,7 +5,7 @@
 To evaluate the limit $\lim_{x \to 0} \frac{\sin x}{x}$ we can not plug in $x=0$.
 We call $\sin x/ x$ an \textbf{indeterminate form} of $[0/0]$ at $x=0$.
 
-The limit of such an indeterminate form can be any number.
+The limit of an indeterminate form $[0/0]$ can be any number.
 \[
   \lim_{x \to 0} \frac{x}{x} = 1, \qquad
   \lim_{x \to 0} \frac{x}{x^3} = \infty, \qquad
@@ -14,24 +14,23 @@ The limit of such an indeterminate form can be any number.
 
 There are other types of indeterminate forms $[\infty/\infty]$, $[0 \cdot \infty]$, $[\infty - \infty]$, $[0^{\infty}]$, $[\infty^0]$, $[1^{\infty}]$.
 
-Indeterminate forms can usually be brought to the form $[0/0]$ or $[\infty/\infty]$. To evaluate limits of the form $[0/0]$ a very useful method is the following.
 
-Suppose $f(a) = g(a) = 0$, $g'(a) \neq 0$ and $f$, $g$ have continuous derivatives at $x=a$. Then
-\[
-  \lim_{x \to a} \frac{f(x)}{g(x)} = \lim_{x \to a} \frac{\frac{f(x)-f(a)}{x-a}}{\frac{g(x)-g(a)}{x-a}} = \lim_{x \to a} \frac{f'(x)}{g'(x)}
-\]
-
-More generally, we have
 \begin{theorem}[l'Hopital's Rules]
-  Suppose that $f$ and $g$ are differentiable on an interval containing $a$. Suppose also that
-  $\lim_{x \to a} f(x) = \lim_{x \to a} g(x) = 0$ and $\lim_{x \to a} \frac{f'(x)}{g'(x)} = L$. Then
+  Let $f$ and $g$ are differentiable on an interval containing $a$.
+  Suppose that
+  $\lim_{x \to a} f(x)$ and $\lim_{x \to a} g(x)$ are either both 0 or both $\pm \infty$. If $\lim_{x \to a} \frac{f'(x)}{g'(x)}$ exists then
   \[
-    \lim_{x \to a} \frac{f(x)}{g(x)} = L.
+    \lim_{x \to a} \frac{f(x)}{g(x)} = \lim_{x \to a} \frac{f'(x)}{g'(x)}.
   \]
-  Similar results hold for $\lim_{x \to a+}$ and $\lim_{x \to a-}$ and for the cases $a= \pm \infty$.
+  The results hold true if $\lim_{x \to a}$ is replaced by $\lim_{x \to a+}$ and $\lim_{x \to a-}$ or if $a= \pm \infty$.
 \end{theorem}
 \begin{proof}
   Proof follows from generalized mean value theorem which we did not cover.
+
+  Let's give a proof for the following special case. Suppose $f(a) = g(a) = 0$, $g'(a) \neq 0$ and $f$, $g$ have continuous derivatives at $x=a$. Then
+\[
+  \lim_{x \to a} \frac{f(x)}{g(x)} = \frac{\lim_{x \to a} \frac{f(x)-f(a)}{x-a}}{\lim_{x \to a} \frac{g(x)-g(a)}{x-a}} = \frac{f'(a)}{g'(a)} = \lim_{x \to a} \frac{f'(x)}{g'(x)}
+\]
 \end{proof}
 
 \texttt{Note that in applying l'Hopital's rule we calculate the quotient of the derivatives, not the derivative of the quotients.}
@@ -90,17 +89,6 @@ If one application of the l'Hopital's rule again gives an indeterminate form, we
   where we use l'Hopital's rule twice.
 \end{solution}
 
-The l'Hopital's rule can also be applied to indeterminate forms of type $[\infty/\infty]$.
-
-\begin{example}
-  \[
-    \lim_{x \to \infty} \frac{x^2}{e^x}.
-  \]
-\end{example}
-\begin{solution}
-  The answer is 0.
-\end{solution}
-
 To deal with indeterminate forms of types $[0^0]$, $[\infty^0]$ and $[1^{\infty}]$, we take logarithms.
 
 \begin{example}
@@ -129,7 +117,7 @@ To deal with indeterminate forms of types $[0^0]$, $[\infty^0]$ and $[1^{\infty}
     \lim_{x \to \infty} \left( 1+ \sin \frac{3}{x} \right)^x
   \]
 \end{example}
-\begin{example}
+\begin{solution}
   This is of the form $[1^{\infty}]$. Again first evaluate the limit of the logarithm. $y=\left( 1+ \sin \frac{3}{x} \right)^x$.
   \[
     \lim_{x \to \infty} \ln y =
@@ -139,5 +127,38 @@ To deal with indeterminate forms of types $[0^0]$, $[\infty^0]$ and $[1^{\infty}
   \[
     \lim_{x \to \infty} \left( 1+ \sin \frac{3}{x} \right)^x = e^3.
   \]
-\end{example}
+\end{solution}
+
+\rule{\textwidth}{1pt}
+\begin{multicols}{2}
+\begin{exercise}
+~\\
+  \begin{enumerate}
+    \item $\lim_{x \to \infty} \frac{x^2}{e^x}.$
+
+    Answer: 0
+    \item $\lim_{x \to 0} \dfrac{x-\sin x}{x^3}$
+
+    Answer: $1/6$
+    \item $\lim_{x \to 0} \dfrac{x-\sin x}{x-\tan x}$
+
+    Answer: $-\frac{1}{2}$
+    \item $\lim_{x \to 0+} x^{\sqrt{x}}$
+
+    Answer: $1$
+    \item $\lim_{x \to 1} \frac{\ln (ex) - 1}{\sin \pi x}$
+
+    Answer: $-\frac{1}{\pi}$
+    \item $\lim_{x \to 0+} \frac{\csc x}{\ln x}$
+
+    Answer: $\infty$
+    \item $\lim_{x \to 0} \left( 1+\tan x \right)^{1/x}$
+
+    Answer: $1$
+  \end{enumerate}
+\end{exercise}
+\end{multicols}
+\rule{\textwidth}{1pt}
+
+
 \end{document}
