--- a/src/5-6-integralOfRationalFuncs.tex
+++ b/src/5-6-integralOfRationalFuncs.tex
@@ -161,5 +161,5 @@ If deg$(P(x)) \ge $deg$(Q(x))$ then we divide $P(x)$ to $Q(x)$ and get a rationa
 	\end{enumerate}
 \end{exercise}
 \end{multicols}
-
+\rule{\textwidth}{1pt}
 \end{document}
