--- a/src/5-7-inverseSubstitutions.tex
+++ b/src/5-7-inverseSubstitutions.tex
@@ -48,6 +48,8 @@ Since $x$ can take any real value, we have $-\pi/2 < \theta < \pi/2$ so that $\s
 
 You are not responsible for the inverse secant transformation which can be used to solve integrals involving $\sqrt{x^2-a^2}$.
 
+\rule{\textwidth}{1pt}
+\begin{multicols}{2}
 \begin{exercise}
 ~\\
 	\begin{enumerate}
@@ -64,6 +66,7 @@ You are not responsible for the inverse secant transformation which can be used 
 		Answer: $\frac{1}{3} \arctan\left( \frac{1+x}{3} \right) + C$
 	\end{enumerate}
 \end{exercise}
-
+\end{multicols}
+\rule{\textwidth}{1pt}
 
 \end{document}
