--- a/calc1-main.tex
+++ b/calc1-main.tex
@@ -176,4 +176,6 @@
     \subfile{src/5-6-integralOfRationalFuncs.tex}
     \section{Inverse Substitutions}
     \subfile{src/5-7-inverseSubstitutions.tex}
+    \section{Improper Integrals}
+    \subfile{src/5-8-improper.tex}
 \end{document}
