--- a/src/1-2-infiniteLimits.tex
+++ b/src/1-2-infiniteLimits.tex
@@ -14,7 +14,7 @@
   \begin{example}
     Argue that
     \[
-      \lim_{x \to \infty} 1/x = \lim_{x \to \-\infty} 1/x = 0.
+      \lim_{x \to \infty} 1/x = \lim_{x \to -\infty} 1/x = 0.
     \]
     by making a table of values of $x$ and $1/x$.
 
