--- a/src/1-3-continuity.tex
+++ b/src/1-3-continuity.tex
@@ -261,4 +261,21 @@ Going this way, we find the approximations, $1.3438$, $1.3282$, $1.3204$. Hence 
 % 1 is the whole number digit.
 
 In engineering, you almost never get exact results. All you can do is lower your error below an acceptable threshold.
+
+\subsection*{Optional Issues}
+\textbf{Is there a function which is continuous only at a single point? Yes!}
+\begin{example}
+  \[
+    f(x) =
+    \begin{cases}
+      x, & \text{if $x$ is a rational number} \\
+      0, & \text{otherwise}
+    \end{cases}
+  \]
+  is continuous only at $x=0$.
+\end{example}
+This also answers the following question
+
+\textbf{If a function is continuous at point, is it continuous in some open interval around that point? NO!}
+
 \end{document}
