--- a/src/2-8-meanValueTheorem.tex
+++ b/src/2-8-meanValueTheorem.tex
@@ -1,6 +1,8 @@
 \documentclass[../calc1-main.tex]{subfiles}
-
 \begin{document}
+\begin{quotation}
+  The Mean Value Theorem is the midwife of calculus - not very important or glamorous by itself, but often helping to deliver other theorems that are of major significance.\\ – E. Purcell and D. Varberg
+\end{quotation}
 
   Suppose you drive in 2 hours from city A to city B which are 200km apart. That means your average speed was 100km/h. Even if you did not travel constant speed, there was at least one instant where  your speed was exactly 100km/h. This is called \textbf{mean value theorem}.
 
