--- a/src/3-4-inversetrig.tex
+++ b/src/3-4-inversetrig.tex
@@ -5,84 +5,130 @@
 The six trigonometric functions are periodic and hence not 1-1. However we can restrict their domains in such a way that the restricted functions are 1-1.
 
 \begin{minipage}{0.5\textwidth}
-  The $\sin^{-1}x$ or $\arcsin x$ is the inverse of the $\sin x$ restricted to $[-\pi/2, \pi/2]$,
+  The $\arcsin x$ or $\arcsin x$ is the inverse of the $\sin x$ restricted to $[-\pi/2, \pi/2]$,
 
   \begin{align*}
-    & \sin (\sin^{-1} y) = y, \qquad -1 \le y \le 1, \\
-    & \sin^{-1} (\sin x) = x, \qquad -\pi/2 \le x \le \pi/2.
+    & \sin (\arcsin y) = y, \qquad -1 \le y \le 1, \\
+    & \arcsin (\sin x) = x, \qquad -\pi/2 \le x \le \pi/2.
   \end{align*}
 \end{minipage}%
 \begin{minipage}{0.5\textwidth}
   \begin{figure}[H]
     \centering
     \input{figures/3-4-arcsin.tikz}
-    \caption{$f(x) = \arcsin x$.}
+    \caption{$f(x) = \arcsin x$ is a partial inverse of the sine function.}
   \end{figure}
 \end{minipage}
 
 \begin{example}
   Simplify
   \begin{enumerate}
-    \item $\sin^{-1} \frac{1}{2} = \frac{\pi}{6}$,
-    \item $\sin^{-1} \frac{-\sqrt{2}}{2} = -\frac{\pi}{4}$,
-    \item $\sin^{-1} 2$ is undefined since $2$ is not in the range of sine.
+    \item $\arcsin \frac{1}{2} = \frac{\pi}{6}$,
+    % In[32]:= ArcSin[1/2] == Pi/6
+
+    % Out[32]= True
+    \item $\arcsin \frac{-\sqrt{2}}{2} = -\frac{\pi}{4}$,
+    % In[33]:= ArcSin[-Sqrt[2]/2] == -Pi/4
+
+    % Out[33]= True
+    \item $\arcsin 2$ is undefined since $2$ is not in the range of sine.
   \end{enumerate}
 \end{example}
 
 \begin{example}
   Simplify
   \begin{enumerate}
-    \item $\sin(\sin^{-1} 0.7) = 0.7$,
-    \item $\sin^{-1}(\sin 3 \pi/4) = \pi/4$,
-    \item $\cos (\sin^{-1} 0.6)$.
+    \item $\sin(\arcsin 0.7) = 0.7$,
+    % In[34]:= Sin[ArcSin[0.7]] == 0.7
+
+    % Out[34]= True
+    \item $\arcsin (\sin 3 \pi/4) = \pi/4$,
+    % In[35]:= ArcSin[Sin[3 Pi/4]] == Pi/4
+
+    % Out[35]= True
+    \item $\cos (\arcsin 0.6)$ = 0.8.
+    % In[37]:= Cos[ArcSin[0.6]] == 0.8
+
+    % Out[37]= True
     \begin{solution}
-      Let $\theta=\sin^{-1} 0.6$. By the Pythagorean Theorem, $\cos \theta = 0.8$.
+      Let $\theta=\arcsin 0.6$. By the Pythagorean Theorem, $\cos \theta = 0.8$.
     \end{solution}
-    \item Similarly $\cos (\sin^{-1} x) = \frac{1}{1-x^2}$.
+    \item Similarly $\cos (\arcsin x) = \sqrt{1-x^2}$.
+    % In[38]:= Cos[ArcSin[x]] == Sqrt[1 - x^2]
+
+    % Out[38]= True
   \end{enumerate}
 \end{example}
 
-Let $y = \sin^{-1} x$ so that $x = \sin y$. Then
+\begin{theorem}
 \[
-  \frac{dy}{dx} = \frac{1}{\frac{dx}{dy}} = \frac{1}{\cos y} = \frac{1}{\sqrt{1-x^2}}.
+  \frac{d }{dx} \arcsin x = \frac{1}{\sqrt{1-x^2}}.
 \]
+% In[40]:= D[ArcSin[x], x] == 1/Sqrt[1 - x^2]
 
-Thus
-\[
-  \frac{d }{dx} \sin^{-1} x = \frac{1}{\sqrt{1-x^2}}.
-\]
+% Out[40]= True
+\end{theorem}
+\begin{proof}
+  Let $y = \arcsin x$ so that $x = \sin y$. Then
+  \[
+    \frac{dy}{dx} = \frac{1}{\frac{dx}{dy}} = \frac{1}{\cos y} = \frac{1}{\sqrt{1-x^2}}.
+  \]
+\end{proof}
 
-\subsection*{The Inverse Tangent (or Arctangent) Function}
+\subsection*{The Arctan Function}
 
-Define the $\tan^{-1} x = \arctan x$ to be the inverse of $(-\pi/2, \pi/2)$.
+Define the $y = \arctan x$ to be the inverse of $y=\tan x$ on $(-\pi/2, \pi/2)$.
 
 \begin{align*}
-  & \tan (\tan^{-1} x) = x, \qquad -\infty < x < \infty, \\
-  & \tan^{-1} (\tan x) = x, \qquad -\pi/2 \le x \le \pi/2.
+  & \tan (\arctan x) = x, \qquad -\infty < x < \infty, \\
+  & \arctan (\tan x) = x, \qquad -\pi/2 < x < \pi/2.
 \end{align*}
 
 \begin{figure}[H]
   \centering
   \input{figures/3-4-arctan.tikz}
-  \caption{$f(x) = \arcsin x$.}
+  \caption{$f(x) = \arctan x$.}
 \end{figure}
 
 \begin{example}
   \begin{enumerate}
-    \item $\tan (\tan^{-1} 3) = 3$,
-    \item $\tan^{-1} (\tan \frac{3\pi}{4}) = \tan^{-1} -1 = -\frac{\pi}{4}$
-    \item $\cos (\tan^{-1} x) = \frac{1}{\sqrt{1+x^2}}$
+    \item $\tan (\arctan 3) = 3$,
+    % In[31]:= Tan[ArcTan[3]] == 3
+
+    % Out[31]= True
+    \item $\arctan (\tan \frac{3\pi}{4}) = \arctan -1 = -\frac{\pi}{4}$
+    % In[41]:= ArcTan[Tan[3 Pi/4]] == ArcTan[-1] == -Pi/4
+
+    % Out[41]= True
+    \item $\cos (\arctan x) = \frac{1}{\sqrt{1+x^2}}$
+    % In[42]:= Cos[ArcTan[x]] == 1/Sqrt[1 + x^2]
+
+    % Out[42]= True
   \end{enumerate}
 \end{example}
 
-Let $y=\tan^{-1} x$ so that $x = \tan y$,
-\[
-  \frac{dy}{dx} = \frac{1}{\frac{dx}{dy}} = \frac{1}{\sec^2 y} = \frac{1}{1+ \tan^2 y} = \frac{1}{1+x^2}.
-\]
+\begin{theorem}
+  $\frac{d \arctan(x)}{dx} = \frac{1}{1+x^2}$
+\end{theorem}
+% In[30]:= D[ArcTan[x], x] == 1/(1 + x^2) // Simplify
+
+% Out[30]= True
+\begin{proof}
+  Let $y=\arctan x$ so that $x = \tan y$,
+  \[
+    \frac{d \arctan(x)}{dx} = \frac{1}{\frac{dx}{dy}} = \frac{1}{\sec^2 y} = \frac{1}{1+ \tan^2 y} = \frac{1}{1+x^2}.
+  \]
+\end{proof}
+
 
 \begin{example}
-  Find the slope of the curve $\tan^{-1}\left( \frac{2x}{y} \right) = \frac{\pi x}{y^2}$ at the point $(1, 2)$.
+  Find the slope of the curve $\arctan\left( \frac{2x}{y} \right) = \frac{\pi x}{y^2}$ at the point $(1, 2)$.
 \end{example}
+% In[27]:= eq = D[ArcTan[2 x/y[x]], x] == D[Pi x/y[x]^2, x];
+% sol = Solve[eq //. {x -> 1, y[1] -> 2}, y'[1]];
+% (y'[1] /. sol[[1]]) == (Pi - 2)/(Pi - 1)
+
+% Out[29]= True
 \begin{solution}
   Taking $\frac{d}{dx}$ of both sides
   \[
@@ -93,21 +139,32 @@ Let $y=\tan^{-1} x$ so that $x = \tan y$,
     2- y' = \pi (1- y') \implies y' = \frac{\pi-2}{\pi-1}.
   \]
 \end{solution}
+
 \subsection*{Other inverse trigonometric functions}
-$\cos x$ is 1-1 on $[0, \pi]$ so we define $\cos^{-1} x$ for $\cos x$ restricted to $[0, \pi]$.
+$\cos x$ is 1-1 on $[0, \pi]$ so we define $y=\arccos x$ as the inverse of $y=\cos x$ restricted to $[0, \pi]$.
 \[
-  y = \cos^{-1} x \iff x = \cos y \qquad 0 \le y \le \pi.
+  y = \arccos x \iff x = \cos y \qquad 0 \le y \le \pi.
 \]
 
-Note that $\sin(\cos^{-1} x) $
+\begin{theorem}
+  \[
+    \frac{d}{dx} \arccos x = -\frac{1}{\sqrt{1-x^2}}
+  \]
+  % In[44]:= D[ArcCos[x], x] == -1/Sqrt[1 - x^2]
+
+  % Out[44]= True
+\end{theorem}
 For the derivative,
 \[
   \frac{dy}{dx} = \frac{1}{\frac{dx}{dy}} = \frac{1}{-\sin y} = -\frac{1}{\sqrt{1-x^2}}
 \]
 Note that
 \[
-  \frac{d}{dx} \cos^{-1}x = -\frac{d}{dx} \sin^{-1}x
+  \frac{d}{dx} \arccos x = -\frac{d}{dx} \arcsin x
 \]
+% In[45]:= D[ArcCos[x], x] == -D[ArcSin[x], x]
+
+% Out[45]= True
 
 The inverse and the derivative of other trigonometric functions can be defined similarly.
 
@@ -115,11 +172,20 @@ The inverse and the derivative of other trigonometric functions can be defined s
 \begin{example}
   Simplify
   \begin{enumerate}
-    \item $\cos(\tan^{-1} \frac{1}{2})$
-    \item $\tan (\cos^{-1} x)$
+    \item $\cos(\arctan \frac{1}{2}) = \frac{2}{\sqrt{5}}$
+    % In[47]:= Cos[ArcTan[1/2]] == 2/Sqrt[5]
+
+    % Out[47]= True
+    \item $\tan (\arccos x)= \frac{\sqrt{1-x^2}}{x}$
+    % In[49]:= Tan[ArcCos[x]] == Sqrt[1 - x^2]/x
+
+    % Out[49]= True
   \end{enumerate}
 \end{example}
 \begin{example}
-  Differentiate $(\sin^{-1} x^2)^{1/2}$.
+  Show that $\frac{d}{dx}(\arcsin x^2)^{1/2} = \frac{x}{\sqrt{1-x^4}\sqrt{\arcsin x^2}}$.
 \end{example}
+% In[53]:= D[Sqrt[ArcSin[x^2]], x] == x/(Sqrt[1 - x^4] Sqrt[ArcSin[x^2]])
+
+% Out[53]= True
 \end{document}
