--- a/src/calc1-main.tex
+++ b/src/calc1-main.tex
@@ -78,104 +78,104 @@
 \tableofcontents
 \chapter{Precalculus}
     \section{Sets}
-    \subfile{src/P-0-sets.tex}
+    \subfile{P-0-sets.tex}
     \section{Real Numbers}
-    \subfile{src/P-1-realnumbers.tex}
+    \subfile{P-1-realnumbers.tex}
     \section{Cartesian Coordinates}
-    \subfile{src/P-2-cartesian.tex}
+    \subfile{P-2-cartesian.tex}
     \section{Quadratic Equations}
-    \subfile{src/P-3-quadratics.tex}
+    \subfile{P-3-quadratics.tex}
     \section{Functions and Their Graphs}
-    \subfile{src/P-4-functions.tex}
+    \subfile{P-4-functions.tex}
     \section{Operations on Functions}
-    \subfile{src/P-5-operfunctions.tex}
+    \subfile{P-5-operfunctions.tex}
     \section{Polynomials and Rational Functions}
-    \subfile{src/P-6-polys.tex}
+    \subfile{P-6-polys.tex}
 
 
 \chapter{Limits and Continuity}
     \section{Informal definition of limits}
-    \subfile{src/1-1-limit.tex}
+    \subfile{1-1-limit.tex}
     \section{Limits at Infinity and Infinite Limits}
-    \subfile{src/1-2-infiniteLimits.tex}
+    \subfile{1-2-infiniteLimits.tex}
     \section{Continuity}
-    \subfile{src/1-3-continuity.tex}
+    \subfile{1-3-continuity.tex}
     \section{Formal definition of Limit}
-    \subfile{src/1-4-formal.tex}
+    \subfile{1-4-formal.tex}
     \section{Review Problems}
-    \subfile{src/1-5-limit-review.tex}
+    \subfile{1-5-limit-review.tex}
 %     \section{One Sided Limits and Limits at Infinity}
-%     \subfile{src/1-6-limit-variations}
+%     \subfile{1-6-limit-variations}
 %     \section{Properties of limits}
-%     \subfile{src/1-2-properties-limits.tex}
+%     \subfile{1-2-properties-limits.tex}
 
 
 \chapter{Differentiation}
     \section{Tangent Lines and Their Slopes}
-    \subfile{src/2-1-tangent}
+    \subfile{2-1-tangent}
     \section{Derivative}
-    \subfile{src/2-2-derivative}
+    \subfile{2-2-derivative}
     \section{Differentiation Rules}
-    \subfile{src/2-3-diffrules}
+    \subfile{2-3-diffrules}
     \section{Chain Rule}
-    \subfile{src/2-4-chain}
+    \subfile{2-4-chain}
     \section{Derivatives of Trigonometric Functions}
-    \subfile{src/2-5-trig}
+    \subfile{2-5-trig}
     \section{Higher Order Derivatives}
-    \subfile{src/2-6-higher}
+    \subfile{2-6-higher}
     \section{Mean Value Theorem}
-    \subfile{src/2-8-mean}
+    \subfile{2-8-meanValueTheorem}
     \section{Implicit Differentiation}
-    \subfile{src/2-9-implicit}
+    \subfile{2-9-implicit}
     \section{Exam 1 Review}
-    \subfile{src/exam1}
+    \subfile{exam1review}
     % \section{Antiderivatives}
-    % \subfile{src/2-10-antider}
+    % \subfile{2-10-antider}
 
 \chapter{Transcendental Functions}
     \section{Inverse Functions}
-    \subfile{src/3-1-inverse}
+    \subfile{3-1-inverse}
     \section{Exponential and Logarithmic Functions}
-    \subfile{src/3-2-exp}
+    \subfile{3-2-exp}
     \section{The Natural Logarithm and Exponential}
-    \subfile{src/3-3-naturallog}
+    \subfile{3-3-naturallog}
     \section{The Inverse Trigonometric Functions}
-    \subfile{src/3-4-inversetrig}
+    \subfile{3-4-inversetrig}
 
 \chapter{Applications of Derivatives}
     \section{Related Rates}
-    \subfile{src/4-1-related.tex}
+    \subfile{4-1-related.tex}
     \section{Indeterminate Forms}
-    \subfile{src/4-2-indeterminate-forms.tex}
+    \subfile{4-2-indeterminate-forms.tex}
     \section{Extreme Values}
-    \subfile{src/4-3-extreme.tex}
+    \subfile{4-3-extreme.tex}
     \section{Concavity and Inflections}
-    \subfile{src/4-4-concavity.tex}
+    \subfile{4-4-concavity.tex}
     \section{Graphs of Functions}
-    \subfile{src/4-5-graph.tex}
+    \subfile{4-5-graph.tex}
     \section{Extreme Value Problems}
-    \subfile{src/4-6-extreme-problems.tex}
+    \subfile{4-6-extreme-problems.tex}
     \section{Linear Approximation}
-    \subfile{src/4-7-linear-approximation.tex}
+    \subfile{4-7-linear-approximation.tex}
     \section{Exam 2 Review}
-    \subfile{src/exam2}
+    \subfile{exam2review}
 
 
 \chapter{Integration}
     \section{The Definite Integral}
-    \subfile{src/5-1-definite-integral.tex}
+    \subfile{5-1-definite-integral.tex}
     \section{The Fundamental Theorem of Calculus}
-    \subfile{src/5-2-FTC.tex}
+    \subfile{5-2-FTC.tex}
     \section{The Method of Substitution}
-    \subfile{src/5-3-substitution.tex}
+    \subfile{5-3-substitution.tex}
     \section{Areas of Plane Regions}
-    \subfile{src/5-4-areas.tex}
+    \subfile{5-4-areas.tex}
     \section{Integration by Parts}
-    \subfile{src/5-5.intByParts.tex}
+    \subfile{5-5.intByParts.tex}
     \section{Integrals of Rational Function}
-    \subfile{src/5-6-integralOfRationalFuncs.tex}
+    \subfile{5-6-integralOfRationalFuncs.tex}
     \section{Inverse Substitutions}
-    \subfile{src/5-7-inverseSubstitutions.tex}
+    \subfile{5-7-inverseSubstitutions.tex}
     \section{Improper Integrals}
-    \subfile{src/5-8-improper.tex}
+    \subfile{5-8-improper.tex}
 \end{document}
