--- a/src/figures/03epsAndNoDelta.tex
+++ b/src/figures/03epsAndNoDelta.tex
@@ -1,6 +1,6 @@
 
 \begin{picture} (180.000000,180.000000)(0,0)
-\put(0.0, 0.0){\includegraphics{figures/03epsAndNoDelta.pdf}}
+\put(0.0, 0.0){\includegraphics{03epsAndNoDelta.pdf}}
     \put( -2.00,  92.85){\sffamily\itshape \makebox[0pt][r]{$L-\varepsilon$}}
     \put( -2.00, 149.81){\sffamily\itshape \makebox[0pt][r]{$L+\varepsilon$}}
     \put( 31.60, 121.33){\sffamily\itshape \makebox[0pt][r]{$L$}}
