--- a/src/5-6-integralOfRationalFuncs.tex
+++ b/src/5-6-integralOfRationalFuncs.tex
@@ -39,7 +39,7 @@ If $Q(x) = a x^2 + bx + c$ has no real roots, we have to \textbf{complete to squ
 	Letting $u = (x+3/2)$ and $du = dx$,
 	\[
 		\int \frac{dx}{(x + \frac{3}{2})^2 + \frac{3}{4}} =
-		\int \frac{du}{u^2 + \frac{3}{4}} = \frac{2}{\sqrt{3}} \tan^{-1} \frac{2x}{\sqrt{3}}  + C
+		\int \frac{du}{u^2 + \frac{3}{4}} = \frac{2}{\sqrt{3}} \tan^{-1} \frac{2(x+\frac{3}{2})}{\sqrt{3}}  + C
 	\]
 	The last part follows from the last example.
 \end{solution}
