--- a/src/figures/P4-graphOFf.tex
+++ b/src/figures/P4-graphOFf.tex
@@ -1,6 +1,6 @@
 
 \begin{picture} (240.000000,144.800000)(0,0)
-\put(0.0, 0.0){\includegraphics{figures/P4-graphOFf.pdf}}
+\put(0.0, 0.0){\includegraphics{P4-graphOFf.pdf}}
     \put( 80.33, 123.97){\sffamily\itshape \makebox[0pt][r]{range of $f$}}
     \put(118.00,  70.71){\sffamily\itshape \makebox[0pt][r]{$y=f(x)$}}
     \put(167.63,  68.71){\sffamily\itshape $(x, f(x))$}
